--- a/public/index.html
+++ b/public/index.html
@@ -25,7 +25,7 @@
                     <a href="#">Docs</a>
                     <a href="#">Litepaper</a>
                     -->
-                    <a href="#" class="btn">Buy Now</a>
+                    <a href="https://dexscreener.com/solana/d6qx7s9vgnhlqm7bci33gxerzybe7fdlxu3wjacagx3y" class="btn">Buy Now</a>
                 </div>
             </nav>
         </div>
@@ -38,8 +38,8 @@
                     <h1>You love cats!?</h1>
                     <p>Join Kitten on Solana to Grow Your Portfolio on Autopilot</p>
                     <div class="hero-buttons">
-                        <a href="#" class="btn">Buy on jup</a>
-                        <a href="#" class="btn btn-outline">Dexscreener</a>
+                        <a href="https://dexscreener.com/solana/d6qx7s9vgnhlqm7bci33gxerzybe7fdlxu3wjacagx3y" class="btn">Buy Now</a>
+                        <a href="https://dexscreener.com/solana/d6qx7s9vgnhlqm7bci33gxerzybe7fdlxu3wjacagx3y" class="btn btn-outline">Dexscreener</a>
                     </div>
                 </div>
                 <div class="hero-image">
